--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,500');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.transactions h2, .transaction h2 {
+    margin: 20px 0 20px 0;
+    font-weight: 500;
+}
+
+.transactions hr, .transaction hr {
+    border: 0.25px solid gray; 
+}
+
+.link {
+    text-decoration: underline;
+    color: black;
+}
+
+.transaction p {
+    line-height: 2em;
+    font-size: 16px;
+    margin: 5% 0 0 3%;
+}
+
+.accountFilter, .transactionFilter {
+    background-color: #f1f1f1;
+    margin-top: 20px;
+    padding: 15px;
+    width: 85%;
+}
+
+.accountFilter li, .transactionFilter li {
+    list-style-type: none;
 }
